--- a/platforms/browser/www/css/main.css
+++ b/platforms/browser/www/css/main.css
@@ -552,7 +552,7 @@ video.videomin {
 }
 
 #pantalla14 .curItemComp {
-	margin: 5px 2px;
+	margin: 5px 4px 5px 5px;
 }
 
 #pantalla14 .btnDescargaFile {
@@ -580,6 +580,7 @@ video.videomin {
     width: 100%;
     margin: 0 auto;
 	max-width: 220px;
+	text-align: left;
 }
 
 .pantcomun {
@@ -1171,6 +1172,7 @@ div#msjconf {
     left: 0;
     padding: 10px;
     color: #FFF;
+    min-height: 60px;
 }
 
 .btotonbotom {
@@ -1187,7 +1189,7 @@ div#msjconf {
 }
 
 .btotonbotom {
-    font-size: 12px;
+    font-size: 11px;
 }
 
 .btotonbotom i {
@@ -1421,7 +1423,7 @@ div#msjconf {
 }
 
 .categoriascur {
-    padding: 5px 30px;
+    padding: 5px 45px;
     margin: 10px auto;
     border-radius: 5px;
 }
@@ -1442,6 +1444,15 @@ div#msjconf {
     color: #FFF;
     border-radius: 25px;
     background: #7740a2;
+}
+
+.categoriascur .boxcate {
+	margin-bottom: 10px;
+    padding: 15px 10px;
+    -webkit-box-shadow: 5px 5px 10px 0px rgba(0,0,0,.6);
+    -moz-box-shadow: 5px 5px 10px 0px rgba(0,0,0,.6);
+    box-shadow: 3px 4px 5px 0px rgba(0,0,0,.4);
+    font-size: 10px;
 }
 
 .sinborde {
@@ -1712,17 +1723,17 @@ button.close {
 }
 
 .circ_resp {
-    width: 120px;
-    height: 120px;
+    width: 160px;
+    height: 160px;
     margin: 6px 6px 20px;
     display: inline-block;
     position: absolute;
     text-align: center;
     line-height: 1.2;
     left: 50%;
-    margin-left: -60px;
+    margin-left: -80px;
     top: 50%;
-    margin-top: -60px;
+    margin-top: -80px;
     pointer-events: none;
     border: 2px solid #FFF;
     border-radius: 50%;
@@ -1743,7 +1754,7 @@ button.close {
 }
 
 .circ_resp_2.activo {
-	opacity: .8;transform: scale(1.5, 1.5);
+	opacity: .8;transform: scale(1.45, 1.45);
 }
 
 .circ_resp_3 {
@@ -1751,7 +1762,7 @@ button.close {
 }
 
 .circ_resp_3.activo {
-	opacity: .6;transform: scale(1.4, 1.4);
+	opacity: .6;transform: scale(1.3, 1.3);
 }
 
 .circ_resp_4 {
@@ -1759,7 +1770,7 @@ button.close {
 }
 
 .circ_resp_4.activo {
-	opacity: .4;transform: scale(1.3, 1.3);
+	opacity: .4;transform: scale(1.15, 1.15);
 }
 
 .circ_resp_5 {
@@ -1767,7 +1778,7 @@ button.close {
 }
 
 .circ_resp_5.activo {
-	opacity: .2;transform: scale(1.2, 1.2);
+	opacity: .2;transform: scale(1, 1);
 }
 
 .circ_resp_6 {
@@ -1775,7 +1786,7 @@ button.close {
 }
 
 .circ_resp_6.activo {
-	opacity: .1;transform: scale(1.1, 1.1)
+	opacity: .1;transform: scale(0.85, 0.85)
 }
 
 
@@ -2134,6 +2145,7 @@ div#audClaseInd_control {
     letter-spacing: 8px;
     font-size: 20px;
     position: relative;
+    height: 40px;
 }
 
 .mensajere.activo {
@@ -2182,7 +2194,7 @@ div#audClaseInd_control {
     position: absolute;
     width: 100%;
     top: 50%;
-    margin-top: 110px;
+    margin-top: 160px;
     left: 0;
 }
 
@@ -2357,6 +2369,14 @@ span#diameddia {
 	margin-top: -105px;
 }
 
+.contCentrado2 {
+	position: absolute;
+	width: 100%;
+	left: 0;
+	top: 50%;
+	margin-top: -130px;
+}
+
 .bolita.backcolor_mbsr {
     background: rgba(22,202,130,1);
     background: -moz-linear-gradient(left, rgba(22,202,130,1) 0%, rgba(23,128,203,1) 100%);
@@ -2376,6 +2396,16 @@ span#diameddia {
 		left: 0;
 		top: 50%;
 		margin-top: -200px;
+	}
+}
+
+@media (min-height: 635px) {
+	.contCentrado2 {
+		position: absolute;
+		width: 100%;
+		left: 0;
+		top: 50%;
+		margin-top: -130px;
 	}
 }
 
