--- a/platforms/browser/www/css/main.css
+++ b/platforms/browser/www/css/main.css
@@ -1848,6 +1848,10 @@ span.rs-tooltip.rs-tooltip-text.edit {
     margin-bottom: 40px;
 }
 
+.boxuser {
+    padding-bottom: 30px;
+}
+
 .blopas {
 	position: relative;
 }
